Fix whitespace in color token property names

--- a/src/_scss/global/_tokens.scss
+++ b/src/_scss/global/_tokens.scss
@@ -43,7 +43,7 @@
 
 :root {
   @each $family, $shades in tokens.$color {
-    $prefix: color-$family;
+    $prefix: color-#{$family};
     @include token($shades, $prefix);
   }
   @include token(tokens.$fontStack, 'font-family');
